<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="preference_key">com.cgangee.sharingbook.preferenceKEY</string>
    <string name="app_name">郑大书享</string>
    <string name="ustuid">学号</string>
    <string name="upwd">密码</string>
    <string name="upwdR">查成绩的密码</string>
    <string name="ugrade">年级</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="uphone">手机号</string>
    <string name="ustuidRemind">请输入学号</string>
    <string name="upwdRemind">请输入密码</string>
    <string name="uphoneRemind">请输入手机号</string>
    <string name="ugradeRemind">请选择年级</string>
    <string name="spicRemind">请选择图书封面照片</string>
    <string name="snameRemind">请输入书名</string>
    <string name="sauthorRemind">请输入作者</string>
    <string name="spriceRemind">请选择价格</string>
    <string name="slocationRemind">请选择分享地点</string>
    <string name="confirm">确定</string>
    <string name="networkRemind">请检查您的网络</string>
    <string name="networkFailed">网络出现错误，请您稍后重试</string>
    <string name="sharingFailed">发布出现错误，请您稍后重试</string>
    <string name="sharingSuccess">恭喜您，发布成功！</string>
    <string name="registerError">年级、学号或密码错误，\n请您重新输入</string>
    <string name="registerSuccess">恭喜您，注册成功！</string>
    <string name="registerHad">您的学号曾经注册过，\n点击确认直接登录</string>
    <string name="loginError">学号或密码错误，\n请您重新输入</string>
    <string name="logoutRemind">您确定要退出吗？</string>
    <string name="cancel">取消</string>
    <string name="logout">退出</string>
    <string name="setting">设置</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="contact">通讯录</string>
    <string name="find">发现</string>
    <string name="search">搜索</string>
    <string name="sharing">发布图书</string>
    <string name="posting">发布</string>
    <string name="headpic">头像</string>
    <string name="me">我</string>
    <string name="sname">书名</string>
    <string name="sauthor">作者</string>
    <string name="sprice">价格</string>
    <string name="slocation">交易地点</string>
    <string name="sendMessage">发消息</string>
    <string name="send">发送</string>
    <string name="observing">关注</string>
    <string name="introductionHome">首页是显示您关注的好友的图书分享信息。</string>
    <string name="introductionNew">点击主界面右上角的加号，便可以发布图书信息。</string>
    <string name="introductionSearch">点击主界面右上角的放大镜，便可以输入图书名或者作者，来搜索到您感兴趣的图书信息。</string>
    <string name="introductionURLRemind">下载地址：</string>
    <string name="introductionURL">http://acm.zzu.edu.cn/SharingBook.apk </string>
    <string name="introduction0">快来使用郑大书享吧~ </string>
    <string name="introduction1">在这里你能找到和你读同一本书的朋友~ </string>
    <string name="introduction2">在这里你可以买到最实惠的图书~</string>
    <string name="introduction3">在这里你可以发布最新的图书信息~</string>
    <string name="fan">粉丝</string>
    <string name="introduction">使用指南</string>
    <string name="observed">已关注</string>
    <string name="user">详细信息</string>
    <string name="headPicUpdateSuccess">您的头像更新成功！</string>
    <string name="buy">申请购买</string>
    <string name="delete">删除</string>
    <string name="deleteRemind">您确定要删除此条分享吗?</string>
    <string name="messageEmpty">发送的消息不能为空</string>
    <string name="editBook">分享管理</string>
    <string name="sold">已出售</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_camera">Camera</string>
    <string name="upic">User head picture</string>
    <string name="webServer">http://acm.zzu.edu.cn/book</string>
</resources>