<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/bUpic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/headpic"
            android:gravity="center_vertical"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/bUname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center_vertical"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:background="#ffffff"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape"
                android:onClick="sendMessage"
                android:text="@string/sendMessage"
                android:textSize="15sp" />

            <Button
                android:id="@+id/bObserving"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape"
                android:onClick="observing"
                android:text=""
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" > <!-- 为突出卡片效果，需设置左右padding,上下通过listView的divider设置 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background_selector"
            android:descendantFocusability="afterDescendants"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp" > <!-- 给每个item增加background -->

            <ImageView
                android:id="@+id/bSpic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/headpic"
                android:minHeight="130dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:id="@+id/bSname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bSauthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bSprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/bSlocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="right"
                    android:layout_weight="8"
                    android:gravity="bottom"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/bSuname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/bStime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/bBuy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:onClick="buy"
        android:text="@string/buy" >
    </Button>

</LinearLayout>